--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -36,7 +36,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
-                android:layout_marginTop="8dp" tools:layout_editor_absoluteX="16dp">
+                android:layout_marginTop="8dp" tools:layout_editor_absoluteX="16dp"
+                tools:listitem="@layout/category_item">
 
             </android.support.v7.widget.RecyclerView>
 
@@ -58,6 +59,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView4"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="8dp"
+                tools:listitem="@layout/foryou_item"
                 >
 
             </android.support.v7.widget.RecyclerView>
