--- a/app/src/main/res/layout/popular_item.xml
+++ b/app/src/main/res/layout/popular_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardview_id"
     android:layout_width="120dp"
     android:layout_height="190dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="5dp"
     cardview:cardCornerRadius="4dp">
 
     <LinearLayout
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="160dp"
             android:scaleType="centerCrop"
-            android:background="#2d2d2d"/>
+            tools:background="#2d2d2d"/>
         <TextView
             android:id="@+id/tv_popular"
             android:textColor="#2d2d2d"
@@ -28,7 +28,7 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Film Title"/>
+            tools:text="Film Title"/>
 
 
     </LinearLayout>
