--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -9,7 +9,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview_id"
+        android:id="@+id/rv_now_showing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/nowplaying_item">
