--- a/app/src/main/res/layout/detailitem.xml
+++ b/app/src/main/res/layout/detailitem.xml
@@ -1,30 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" 
-    android:layout_height="match_parent"
-    android:background="#223C53">
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardview"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#223C53">
+
+    <ImageView
+        android:id="@+id/iv_detailitem"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:cardCornerRadius="30dp"
-        android:layout_centerHorizontal="true"
-        />
-            <ImageView
-                android:id="@+id/iv_detailitem"
-                android:layout_width="wrap_content"
-                android:layout_height="300dp"
-                android:scaleType="fitXY"
-                tools:src="@drawable/gunung_putri"
-                android:layout_marginVertical="7dp"
-                android:layout_marginHorizontal="20sp"
-                />
+        android:layout_height="300dp"
+        android:scaleType="fitXY"
+        tools:src="@drawable/gunung_putri"
+        android:layout_marginVertical="7dp"
+        android:layout_marginHorizontal="20sp"
+    />
 
     <TextView
-        android:id="@+id/tv_detailitem"
+        android:id="@+id/tv_title_detailIteam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/iv_detailitem"
@@ -40,7 +33,7 @@
         android:id="@+id/btn_daftar_baru"
         android:layout_width="100dp"
         android:layout_height="20sp"
-        android:layout_alignStart="@+id/tv_detailitem"
+        android:layout_alignStart="@+id/tv_title_detailIteam"
         android:layout_alignBottom="@+id/iv_detailitem"
         android:layout_marginStart="0dp"
         android:layout_marginBottom="-30dp"
