Add Search View

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,4 +7,13 @@
     android:layout_height="match_parent"
     tools:context=".activity.SearchActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_search"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/nowplaying_item"
+        android:layout_margin="16dp"
+    >
+    </android.support.v7.widget.RecyclerView>
+
 </android.support.constraint.ConstraintLayout>
