--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,21 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.MainActivity">
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager_main"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints">
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs_main"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"/>
-
-    </android.support.v4.view.ViewPager>
+    tools:context=".activity.MainActivity"
+    style="@style/MainTheme"
+>
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -31,16 +19,28 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             tools:text="TMDB"
-            android:id="@+id/toolbar_text"
+            android:id="@+id/tv_toolbar"
             android:textColor="@color/text"
+            android:layout_marginRight="?android:attr/actionBarSize"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
     </android.support.v7.widget.Toolbar>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview_id"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:ignore="MissingConstraints">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"/>
+
+    </android.support.v4.view.ViewPager>
+
+
 
 </android.support.constraint.ConstraintLayout>
