--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -55,4 +55,11 @@
 
     </TextView>
 
+    <Button
+        android:id="@+id/btn_add_to_favorite"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary" android:textColor="@android:color/white" android:textStyle="bold"
+        android:text="Add to Favorite"/>
+
 </RelativeLayout>
