--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.BerandaFragment">
+    tools:context=".fragment.BerandaFragment"
+             android:layout_marginBottom="16dp"
+>
 
 
     <ScrollView
@@ -13,31 +15,21 @@
     <!-- TODO: Update blank fragment layout -->
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp"
             >
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:text="Category Film"
-                android:textColor="@color/text"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
-                android:layout_marginTop="8dp" tools:layout_editor_absoluteX="16dp"
-                tools:listitem="@layout/category_item">
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_editor_absoluteX="16dp"
+                >
 
             </android.support.v7.widget.RecyclerView>
 
@@ -55,12 +47,11 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_for_you"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/textView4"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
-                tools:listitem="@layout/foryou_item"
-                >
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView4">
 
             </android.support.v7.widget.RecyclerView>
 
