--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,59 +7,92 @@
     android:layout_height="match_parent"
     android:background="#223C53">
 
-    <ImageView
-        android:id="@+id/iv_detailitem"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/action"
-    />
+    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
+                android:layout_marginBottom="32dp"
+    >
+        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/iv_detailitem"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/action"
+            />
 
-    <TextView
-        android:id="@+id/tv_title_detailIteam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/iv_detailitem"
-        android:layout_alignEnd="@+id/iv_detailitem"
-        android:layout_alignBottom="@+id/iv_detailitem"
-        android:textAlignment="center"
-        android:textColor="#fff"
-        android:textSize="16sp"
-        android:textStyle="italic"
-        tools:text="Avenger Infinity War" />
+            <TextView
+                android:id="@+id/tv_title_detailIteam"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/iv_detailitem"
+                android:layout_alignEnd="@+id/iv_detailitem"
+                android:layout_alignBottom="@+id/iv_detailitem"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="16sp"
+                android:textStyle="italic"
+                tools:text="Avenger Infinity War" />
 
-    <Button
-        android:id="@+id/btn_kategori"
-        android:layout_width="100dp"
-        android:layout_height="20sp"
-        android:layout_alignStart="@+id/tv_title_detailIteam"
-        android:layout_alignBottom="@+id/iv_detailitem"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="-30dp"
-        android:background="@drawable/rectangle_button"
-        android:elevation="1dp"
-        android:text="Kategori"
-        android:textColor="#fff"
-        android:textSize="15dp"
-        android:textStyle="normal" />
+            <Button
+                android:id="@+id/btn_kategori"
+                android:layout_width="100dp"
+                android:layout_height="20sp"
+                android:layout_alignStart="@+id/tv_title_detailIteam"
+                android:layout_alignBottom="@+id/iv_detailitem"
+                android:layout_marginStart="0dp"
+                android:layout_marginBottom="-30dp"
+                android:background="@drawable/rectangle_button"
+                android:elevation="1dp"
+                android:text="Kategori"
+                android:textColor="#fff"
+                android:textSize="15dp"
+                android:textStyle="normal" />
 
-    <TextView
-        android:id="@+id/tv_desc_detail"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/tv_title_detailIteam"
-        android:layout_marginHorizontal="20sp"
-        android:layout_marginTop="31dp"
-        android:textColor="@color/cardview_light_background"
-        android:text="asdasdasdasdasdasdasdasdasdasdasdasdasdadadsdsasadadsasasdsaddsaadsasdasd">
+            <TextView
+                android:id="@+id/tv_desc_detail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_title_detailIteam"
+                android:layout_marginHorizontal="20sp"
+                android:layout_marginTop="31dp"
+                android:text="asdasdasdasdasdasdasdasdasdasdasdasdasdadadsdsasadadsasasdsaddsaadsasdasd"
+                android:textColor="@color/cardview_light_background">
 
-    </TextView>
+            </TextView>
+
+            <com.google.android.youtube.player.YouTubePlayerView
+                android:id="@+id/yt_player_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_desc_detail"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="32dp"
+            >
+
+            </com.google.android.youtube.player.YouTubePlayerView>
+
+            <ImageView
+                android:id="@+id/iv_play"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:layout_alignStart="@id/yt_player_view"
+                android:layout_alignTop="@id/yt_player_view" android:layout_alignEnd="@id/yt_player_view"
+                android:layout_alignBottom="@id/yt_player_view"
+                android:src="@drawable/ic_play_circle_outline_black_24dp"
+                android:padding="32dp"
+            />
+
+
+
+        </RelativeLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/btn_add_to_favorite"
         android:layout_width="match_parent"
         android:layout_height="50dp" android:layout_alignParentBottom="true"
         android:background="@color/colorPrimary" android:textColor="@android:color/white" android:textStyle="bold"
-        android:text="Add to Favorite"/>
+        android:text="Add to Favorite"
+    />
+
 
 </RelativeLayout>
