--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -5,7 +5,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.CategoryActivity">
+    tools:context=".activity.CategoryActivity"
+    android:orientation="vertical"
+>
+
+    <TextView
+        android:id="@+id/tv_title_category"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        tools:text="Action"
+        android:textAlignment="center"
+        android:textColor="#000"
+        android:layout_margin="16dp"
+    />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_category_list_movie"
