--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -5,6 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="8dp"
+
+             android:paddingTop="16dp"
+             android:paddingRight="16dp"
+             android:paddingLeft="16dp"
+             android:paddingBottom="40dp"
     tools:context=".fragment.NowPlayingFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -13,6 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        tools:listitem="@layout/nowplaying_item">
+        tools:listitem="@layout/movie_item">
     </android.support.v7.widget.RecyclerView>
 </FrameLayout>
