--- a/app/src/main/res/layout/fragment_popular.xml
+++ b/app/src/main/res/layout/fragment_popular.xml
@@ -5,6 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
              android:layout_margin="8dp"
+             android:paddingTop="16dp"
+             android:paddingRight="16dp"
+             android:paddingLeft="16dp"
+             android:paddingBottom="40dp"
     tools:context=".fragment.PopularFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -13,6 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="16dp"
-        tools:listitem="@layout/popular_item">
+        tools:listitem="@layout/movie_item">
     </android.support.v7.widget.RecyclerView>
 </FrameLayout>
