--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -5,22 +5,23 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    >
+>
     <android.support.v7.widget.CardView
         android:id="@+id/cardview"
-        android:layout_width="125dp"
-        android:layout_height="150dp"
+        android:layout_width="175dp"
+        android:layout_height="245dp"
         android:layout_margin="4dp"
         app:cardCornerRadius="10dp"
-        >
+    >
         <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
             <ImageView
-                android:id="@+id/iv_foryou"
+                android:id="@+id/iv_movie"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
                 tools:src="@drawable/gunung_putri"
-                />
+            />
+
         </RelativeLayout>
 
 
@@ -28,35 +29,34 @@
     </android.support.v7.widget.CardView>
 
     <TextView
-        android:id="@+id/tv_foryou"
+        android:id="@+id/tv_movie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="textStart"
+        android:textColor="#000"
+        android:textSize="14sp"
+        android:textStyle="bold"
         android:layout_below="@id/cardview"
         android:layout_alignStart="@id/cardview"
         android:layout_alignEnd="@id/cardview"
-        android:textAlignment="textStart"
-        android:textColor="#000"
-        android:textSize="11sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="2dp"
         tools:text="Gunung Putri Lembang"/>
 
     <ImageView
         android:id="@+id/iv_rate"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_below="@id/tv_foryou"
-        android:layout_alignStart="@id/tv_foryou"
+        android:layout_width="17dp"
+        android:layout_height="17dp"
+        android:layout_below="@id/tv_movie"
+        android:layout_alignStart="@id/tv_movie"
         android:layout_marginRight="4dp"
         android:src="@drawable/ic_star_rate"/>
 
     <TextView
-        android:id="@+id/tv_rate"
+        android:id="@+id/tv_movie_rate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_foryou"
+        android:layout_below="@id/tv_movie"
         android:layout_toEndOf="@id/iv_rate"
-        android:textSize="10dp"
+        android:textSize="12dp"
         android:textColor="#000"
         tools:text="4.5"/>
 
